# AanvraagApp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  flake.nix  pyproject.toml  pyrightconfig.json  test_rvo_workflow.py
aanvraagapp/: app.py  cli.py  config.py  database.py  email.py  models.py  types.py
aanvraagapp/controllers/: __init__.py  auth.py  client.py  home.py  provider.py  user.py
aanvraagapp/dependencies/: __init__.py  auth.py  utils.py
aanvraagapp/parsing/: __init__.py  ai.py  ai_client.py  clean.py  listing.py  parsing.py  structured_outputs.py  utils.py  website.py
aanvraagapp/parsing/prompts/: extract_field_data_from_md.jinja  extract_field_data_from_subsidy.jinja  prompts.py  rewrite_client_in_md.jinja  rewrite_in_md.jinja  rewrite_subsidy_in_md.jinja  score_client_listing_match.jinja
aanvraagapp/provider_workflows/: __init__.py  rvo.py
aanvraagapp/routers/: __init__.py  auth.py  client.py  home.py  login.py  provider.py  user.py
aanvraagapp/static/: styles.css
aanvraagapp/templates/: base.jinja  templates.py
aanvraagapp/templates/email/: forgot_password.jinja  forgot_password_404.jinja
aanvraagapp/templates/layouts/: authenticated.jinja  public.jinja  standalone.jinja
aanvraagapp/templates/pages/: 403.jinja  404.jinja  client-detail.jinja  clients.jinja  forgot-password.jinja  home.jinja  login.jinja  new-client.jinja  register.jinja  reset-password.jinja  test.jinja
aanvraagapp/templates/pages/client/: clients.jinja  (+2 more)
init_db/: init_db.sql
tests/: conftest.py  db_utils.py  test_gemini.py  test_listing_parsing.py  test_match_making.py
tests/data/: cleaned_html.txt  converted_to_markdown.txt  html_content.txt
tests/db/: db.py  dummy.py  gemini.py  utils.py
(+3 files in other folders)
