[project]
name = "aanvraagapp"
version = "0.1.0"
description = "Write proposals for whatever blazingly fast"
authors = [
    {name = "mark@markdewijk.nl"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.15"
uvicorn = "^0.35.0"

